--- a/ej-cypress/package.json
+++ b/ej-cypress/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "cypress open",
-    "start": "npx http-server"
+    "start": "npx http-server",
+    "start:1": "npx http-server ./web-codigo-secreto"
   },
   "keywords": [],
   "author": "",
